[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.13.0"
jsonpath = "0.1.1"
futures = "0.3.24"
anyhow = "1.0.65"
structopt = "0.3.26"
axum = "0.5.16"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[[example]]
name = "reqwest-get"
path = "examples/reqwest/get.rs"


[[example]]
name = "reqwest-post"
path = "examples/reqwest/post.rs"

[[example]]
name = "reqwest-tieba"
path = "examples/reqwest/tieba.rs"


[[example]]
name = "reqwest-download"
path = "examples/reqwest/download.rs"

[[example]]
name = "axum-helloworld"
path = "examples/axum/helloworld.rs"

[[example]]
name = "axum-route"
path = "examples/axum/route.rs"

[[example]]
name = "sqlite-create"
path = "examples/sqlite/create.rs"

[[example]]
name = "sqlite-select"
path = "examples/sqlite/select.rs"

[[example]]
name = "sqlite-transaction"
path = "examples/sqlite/transaction.rs"
