[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.13.0"
jsonpath = "0.1.1"
futures = "0.3.24"
anyhow = "1.0.65"
structopt = "0.3.26"
axum = "0.5.16"
rand = "0.8.5"
rand_distr = "0.4.3"

[[example]]
name = "reqwest-get"
path = "examples/reqwest/get.rs"


[[example]]
name = "reqwest-post"
path = "examples/reqwest/post.rs"

[[example]]
name = "reqwest-tieba"
path = "examples/reqwest/tieba.rs"


[[example]]
name = "reqwest-download"
path = "examples/reqwest/download.rs"

[[example]]
name = "axum-helloworld"
path = "examples/axum/helloworld.rs"

[[example]]
name = "axum-route"
path = "examples/axum/route.rs"

[[example]]
name = "rng-gen"
path = "examples/rng/gen.rs"

[[example]]
name = "rng-gen-range"
path = "examples/rng/gen_range.rs"

[[example]]
name = "rng-uniform"
path = "examples/rng/uniform.rs"

[[example]]
name = "rng-normal"
path = "examples/rng/normal.rs"

[[example]]
name = "rng-point"
path = "examples/rng/point.rs"

[[example]]
name = "rng-alphanumeric"
path = "examples/rng/alphanumeric.rs"

[[example]]
name = "rng-my-gen-string"
path = "examples/rng/my_gen_string.rs"

[[example]]
name = "vectorsort-sort"
path = "examples/vectorsort/sort.rs"

[[example]]
name = "vectorsort-sort-by"
path = "examples/vectorsort/sort_by.rs"

[[example]]
name = "vectorsort-struct"
path = "examples/vectorsort/struct.rs"